--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 .Rproj.user
 
 *.Rproj
+logger/data/.Rapp.history
+logger/data/.Rhistory
+logger/data/.Rhistory
+logger/data/.Rhistory
+logger/code/logger_v12/logger_v12.ino
